tests/ui/const-generics/associated-const-bindings/wf-mismatch-1.stderr
error: the constant `N` is not of type `bool`
  --> $DIR/wf-mismatch-1.rs:9:34
   |
LL | fn f<const N: i32>(_: impl Trait<CT = { N }>) {}
   |                                  ^^^^^^^^^^ expected `bool`, found `i32`
   |
note: required by a const generic parameter in `f`
  --> $DIR/wf-mismatch-1.rs:9:34
   |
LL | fn f<const N: i32>(_: impl Trait<CT = { N }>) {}
   |                                  ^^^^^^^^^^ required by this const generic parameter in `f`

error: aborting due to 1 previous error

